--- a/PizzaShopWebApp/appsettings.json
+++ b/PizzaShopWebApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "http://localhost:5156"
+    "BaseUrl": "https://localhost:16001"
   }
 }
