--- a/TravelOrganizationWebApp.New/appsettings.json
+++ b/TravelOrganizationWebApp.New/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "https://localhost:16001/api/"
+    "BaseUrl": "http://localhost:16000/api/"
+  },
+  "UnsplashSettings": {
+    "AccessKey": "DK2ALZwtz82bP0eqwmJPkPpnUw-gU7r4wsZ3tBlts0I",
+    "SecretKey": "w1kCItbG9VCccxiw8CVKgRyt5j4IaN2mIULrmJly5pE",
+    "ApplicationId": "729687",
+    "CacheDurationMinutes": 60
   }
 }
