ok working win pc

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQL;Database=TravelOrganizationDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+        "DefaultConnection": "Server=.;Database=TravelOrganizationDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "JwtSettings": {
     "Secret": "YourSuperSecretKeyWithAtLeast32Characters",
