test: trigger cdci

--- a/TravelOrganizationSystem/WebApp/appsettings.Production.json
+++ b/TravelOrganizationSystem/WebApp/appsettings.Production.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiSettings": {
-    "BaseUrl": "https://travel-api-sokol-2024.azurewebsites.net/api/"
+    "BaseUrl": "https://travel-api-matija.azurewebsites.net/api/"
   },
   "UnsplashSettings": {
     "AccessKey": "DK2ALZwtz82bP0eqwmJPkPpnUw-gU7r4wsZ3tBlts0I",
