--- a/TravelOrganizationSystem/Integration.Tests/Integration.Tests.csproj
+++ b/TravelOrganizationSystem/Integration.Tests/Integration.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+    <ProjectReference Include="..\WebAPI\WebApi.csproj" />
     <ProjectReference Include="..\WebApp\WebApp.csproj" />
   </ItemGroup>
 
