--- a/TravelOrganizationSystem/WebAPI.Tests/WebAPI.Tests.csproj
+++ b/TravelOrganizationSystem/WebAPI.Tests/WebAPI.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebAPI\WebAPI.csproj" />
+    <ProjectReference Include="..\WebAPI\WebApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
