--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -1,45 +1,40 @@
-name: Deploy WebApp to Azure
+name: Deploy WebApp
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master ]
     paths:
       - 'TravelOrganizationSystem/WebApp/**'
+      - '.github/workflows/deploy-webapp.yml'
   workflow_dispatch:
 
-env:
-  AZURE_WEBAPP_NAME: 'travel-web-matija'    
-  AZURE_WEBAPP_PACKAGE_PATH: './TravelOrganizationSystem/WebApp'
-  DOTNET_VERSION: '8.x'
-
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v4
-
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3
+    - uses: actions/checkout@v4
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: 'Build and test WebApp'
-      run: |
-        cd ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        dotnet restore
-        dotnet build --configuration Release --no-restore
-        dotnet publish -c Release -o ./output
-
-    - name: 'Create deployment package'
-      run: |
-        cd ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/output
-        zip -r ../../../webapp-deploy.zip .
-        
-    - name: 'Deploy to Azure Web App'
+        dotnet-version: '8.0.x'
+    
+    - name: Restore dependencies
+      run: dotnet restore TravelOrganizationSystem/WebApp/WebApp.csproj
+    
+    - name: Build
+      run: dotnet build TravelOrganizationSystem/WebApp/WebApp.csproj --no-restore --configuration Release
+    
+    - name: Test
+      run: dotnet test TravelOrganizationSystem/WebApp.Tests/WebApp.Tests.csproj --no-build --verbosity normal --configuration Release
+    
+    - name: Publish
+      run: dotnet publish TravelOrganizationSystem/WebApp/WebApp.csproj --no-build --configuration Release --output ./webapp-publish
+    
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FRONTEND }}
-        package: './webapp-deploy.zip' 
+        app-name: ${{ secrets.AZURE_WEBAPP_APP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ./webapp-publish
