--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
