--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build TravelOrganizationSystem/WebAPI/WebApi.csproj --no-restore --configuration Release
     
     - name: Test
-      run: dotnet test TravelOrganizationSystem/WebAPI.Tests/WebAPI.Tests.csproj --no-build --verbosity normal --configuration Release
+      run: dotnet test TravelOrganizationSystem/WebAPI.Tests/WebAPI.Tests.csproj --no-build --verbosity normal --configuration Release --logger "console;verbosity=detailed"
     
     - name: Publish
       run: dotnet publish TravelOrganizationSystem/WebAPI/WebApi.csproj --no-build --configuration Release --output ./api-publish
