--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build TravelOrganizationSystem/WebApp/WebApp.csproj --no-restore --configuration Release
     
     - name: Test
-      run: dotnet test TravelOrganizationSystem/WebApp.Tests/WebApp.Tests.csproj --no-build --verbosity normal --configuration Release
+      run: dotnet test TravelOrganizationSystem/WebApp.Tests/WebApp.Tests.csproj --no-build --verbosity normal --configuration Release --logger "console;verbosity=detailed"
     
     - name: Publish
       run: dotnet publish TravelOrganizationSystem/WebApp/WebApp.csproj --no-build --configuration Release --output ./webapp-publish
