fix: add Azure login with publish profile for API deployment
- Add azure/login@v1 step with publish profile authentication
- This provides the required Azure credentials for webapps-deploy action
- Should resolve 'No credentials found' deployment error

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        publish-profile: ${{ secrets.AZURE_API_PUBLISH_PROFILE }}
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
