--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -35,5 +40,5 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        publish-profile: ${{ secrets.AZURE_API_PUBLISH_PROFILE }}
+        app-name: travel-api-matija
         package: ./api-publish
